k8s/app/jenkins-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-bridge
  namespace: smart-logistics
spec:
  type: ExternalName
  externalName: jenkins-service.jenkins.svc.cluster.local
  ports:
  - port: 8080
